# challenge-gol

./: .env_exemple  Dockerfile  README.md  docker-compose.yaml  load_data_to_db.py  pyproject.toml
app/: __init__.py  config.py
app/controllers/: auth.py  flight.py
app/database/: connection.py
app/models/: flight.py  user.py
app/repositories/: auth.py  flight.py
app/services/: auth.py  flight.py
app/templates/: dashboard.html  index.html  register.html
app/templates/static/css/: style.css
app/templates/static/js/: app.js  auth.js
app/utils/: password.py
init/: schema.sql
tests/: conftest.py  test_auth_service.py  test_flight_service.py
